--- a/box-agree.html
+++ b/box-agree.html
@@ -37,9 +37,9 @@
                 </h1>
                 <br />
                 <a href="finish.html" class="btn item2 gs-animation-4">&#10004; Đồng ý</a>
-                <a href="#!" class="btn item3 gs-animation-5">&#9888; Không ạ</a>
+                <a href="javascript:;" class="btn item3 gs-animation-5">&#9888; Không ạ</a>
                 <a href="finish.html" class="btn item4 hidden gs-animation-6">&#9996; OK</a>
-                <!-- <a href="#!" class="btn item5">&#9888; Muốn suy nghĩ thêm</a> -->
+                <!-- <a href="javascript:;" class="btn item5">&#9888; Muốn suy nghĩ thêm</a> -->
               </div>
             </div>
           </div>
