--- a/box-why.html
+++ b/box-why.html
@@ -52,7 +52,7 @@
                   </p>
                 </div>
 
-                <a href="#!" id="submitSection3" class="btn item mt-3 gs-animation-4"
+                <a href="javascript:;" id="submitSection3" class="btn item mt-3 gs-animation-4"
                   >&#10084; Gửi</a
                 >
                 <a
@@ -62,7 +62,7 @@
                   >&#10084; Chắc chắn</a
                 >
                 <br />
-                <a href="#!" id="submitSection3-3" class="btn mt-3 mb-3 hidden gs-animation-7"
+                <a href="javascript:;" id="submitSection3-3" class="btn mt-3 mb-3 hidden gs-animation-7"
                   >&#9785; Không, em muốn sửa lại, đây là ai ý chứ</a
                 >
                 <p class="text-submitSection3-3 mt-3 hidden gs-animation-5">
