--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <h3 class="card-text item gs-animation-2">
                   Anh hỏi em điều này em phải trả lời thật lòng nha.
                 </h3>
-                <a href="#!" class="btn mt-3 item item1 gs-animation-3">&#10004; Dạ vâng ạ</a
+                <a href="javascript:;" class="btn mt-3 item item1 gs-animation-3">&#10004; Dạ vâng ạ</a
                 >
-                <a href="#!" class="btn mt-3 item item2 gs-animation-4">&#10006; Không rảnh</a>
-                <a href="#!" class="btn mt-3 item item3 hidden">&#9785; Bao giờ nút sửa xong?</a>
+                <a href="javascript:;" class="btn mt-3 item item2 gs-animation-4">&#10006; Không rảnh</a>
+                <a href="javascript:;" class="btn mt-3 item item3 hidden">&#9785; Bao giờ nút sửa xong?</a>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
                   <a href="box-why.html" id="yes" class="btn btn-primary gs-animation-3"
                     >&#10004; Đúng ạ</a
                   >
-                  <a href="#" id="no" class="btn btn-danger gs-animation-4"
+                  <a href="javascript:;" id="no" class="btn btn-danger gs-animation-4"
                     >&#10006; Không hề</a
                   >
                 </div>
