--- a/finish.html
+++ b/finish.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="box-card">
         <div class="card mt-3 pt-5 text-center align-self-center" style="max-width: 58rem">
-          <img src="../src/images/chibi-5.jpg" class="card-img-top item gs-animation-3" alt="..." />
+          <img src="src/images/chibi-5.jpg" class="card-img-top item gs-animation-3" alt="..." />
           <div class="card-body">
             <h3 class="card-text item gs-animation-4">
               Xin chúc mừng !!!
