--- a/box-why.html
+++ b/box-why.html
@@ -24,7 +24,7 @@
               style="max-width: 58rem"
             >
               <img
-                src="../src/images/chibi-3.jpg"
+                src="src/images/chibi-3.jpg"
                 class="card-img-top item gs-animation-1"
                 alt="..."
               />
