--- a/finish.html
+++ b/finish.html
@@ -88,7 +88,7 @@
     }
 
     .snow.foreground {
-      background-image: url(../src/images/hoa-hong-3.png);
+      background-image: url(src/images/hoa-hong-3.png);
       -webkit-animation-duration: 15s;
       animation-duration: 10s;
     }
@@ -99,7 +99,7 @@
     }
 
     .snow.middleground {
-      background-image: url(../src/images/hoa-hong-3.png);
+      background-image: url(src/images/hoa-hong-3.png);
       -webkit-animation-duration: 20s;
       animation-duration: 15s;
     }
@@ -110,7 +110,7 @@
     }
 
     .snow.background {
-      background-image: url(../src/images/hoa-hong-3.png);
+      background-image: url(src/images/hoa-hong-3.png);
       -webkit-animation-duration: 25s;
       animation-duration: 20s;
     }
