--- a/finish.html
+++ b/finish.html
@@ -32,7 +32,7 @@
             </h3>
             <a href="javascript:;" class="btn item batnhac mt-3 gs-animation-4"><span style="color: #3bff96">&#9835;</span> Mở nhạc</a>
             <a href="javascript:;" class="btn item tatnhac mt-3 gs-animation-7">&#9888; Tắt nhạc</a>
-            <a href="index.html" class="btn item quaylai mt-3 gs-animation-5">&#9728; Quay lại trang đầu</a>
+            <a href="/" class="btn item quaylai mt-3 gs-animation-5">&#9728; Quay lại trang đầu</a>
             <br /><br /><br />
             <p class="card-text item gs-animation-5">
               Ngày bắt đầu: <span style="color: #ffeb3b">19:41:52 18-02-2024</span>
