Update video bg

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
           </div>
         </div>
       </section>
+
+      <section class="box-videos-bg">
+        <video autoplay muted loop id="background-video">
+          <source src="src/videos/End_Kho_Bau_Duoi_Bien.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+       </video>
+      </section>
     </main>
 
     <script src="dist/main.js"></script>
