--- a/finish.html
+++ b/finish.html
@@ -25,7 +25,7 @@
             <h1 class="card-title">
               <div style="color: #ffeb3b" class="item2 gs-animation-1">Trần Mạnh</div>
               <div class="gs-animation-6" style=" color: #fff; ">&amp;</div>
-              <div style="color: #ffeb3b" class="item3 gs-animation-2">Ngọc</div>
+              <div style="color: #ffeb3b" class="item3 gs-animation-2">Hồng Ngọc</div>
             </h1>
             <h3 class="card-text item gs-animation-5">
               Hai bạn đã chính thức trở thành người yêu của nhau. &#10083;
