--- a/finish.html
+++ b/finish.html
@@ -17,28 +17,32 @@
     <div class="container">
       <div class="box-card">
         <div class="card mt-3 pt-5 text-center align-self-center" style="max-width: 58rem">
-          <img src="src/images/chibi-5.jpg" class="card-img-top item gs-animation-3" alt="..." />
+          <!-- <img src="src/images/chibi-5.jpg" class="card-img-top item gs-animation-3" alt="..." /> -->
           <div class="card-body">
             <h3 class="card-text item gs-animation-4">
               Xin chúc mừng !!!
             </h3>
             <h1 class="card-title">
-              <div style="color: #ffeb3b" class="item2 gs-animation-1">Trần Mạnh</div>
-              <div class="gs-animation-6" style=" color: #fff; ">&amp;</div>
-              <div style="color: #ffeb3b" class="item3 gs-animation-2">Hồng Ngọc</div>
+              <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
+                class="item2 gs-animation-1">Trần Mạnh</div>
+              <div class="gs-animation-6" style=" color: #fff; ">&#10084;</div>
+              <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
+                class="item3 gs-animation-2">Hồng Ngọc</div>
             </h1>
             <h3 class="card-text item gs-animation-5">
-              <div style="text-decoration: line-through;">Hai bạn đã chính thức trở thành người yêu của nhau. &#10083;
-              </div>
-              <div>Hai bạn đã chính thức trở thành vợ chồng của nhau. &#10083;</div>
+              <div>Hai bạn đã chính thức trở thành vợ chồng của nhau. 🎉🎉🎉</div>
             </h3>
-            <a href="javascript:;" class="btn item batnhac mt-3 gs-animation-4"><span
-                style="color: #3bff96">&#9835;</span> Mở nhạc</a>
-            <a href="javascript:;" class="btn item tatnhac mt-3 gs-animation-7">&#9888; Tắt nhạc</a>
-            <a href="/rubyngoc" class="btn item quaylai mt-3 gs-animation-5">&#9728; Quay lại trang đầu</a>
-            <br /><br /><br />
+            <br />
+
+            <div class="video-wrapper">
+              <iframe src="https://www.youtube.com/embed/pnSXfw2ucWo?rel=0" height="315" width="560" allowfullscreen=""
+                frameborder="0">
+              </iframe>
+            </div>
+
+            <br /><br />
             <p class="card-text item gs-animation-5">
-              Ngày bắt đầu: <span style="color: #ffeb3b;text-decoration: line-through;">19:41:52 18-02-2024</span>
+              Lần đầu gặp mặt: <span style="color: #ffeb3b;">19:41:52 18-02-2024</span>
               <br>
               Ngày kết hôn: <span style="color: #ffeb3b">11:00:00 02-04-2024</span>
             </p>
@@ -51,7 +55,7 @@
             <p class="card-text item gs-animation-4" style="margin-bottom: 0;">
               Hai bạn đã là người yêu của nhau trong:
             </p>
-            <div class="card-text item gs-animation-7" style="margin-bottom: 20px;color: #ffeb3b">
+            <div class="card-text item gs-animation-7" style="display: flex; justify-content: center;margin-bottom: 20px;color: #ffeb3b;display: flex; align-items: center;">
               <span id="timeDaYeuNhau_show"></span>
             </div>
 
@@ -67,7 +71,8 @@
               <div class='box-achievement-paper'>
                 <div class="future">
                   <div class="text-top">
-                    Hai bạn sẽ đạt thành tựu <strong style="color: #ffc107;">Paper Anniversary (Đám cưới giấy)</strong> sau:
+                    Hai bạn sẽ đạt thành tựu <strong style="color: #ffc107;">Paper Anniversary (Đám cưới giấy)</strong>
+                    sau:
                   </div>
                   <div class="text-time">
                     <span class="resultKyNiemDamCuoi" id="resultKyNiemDamCuoiGiay_show"></span>
@@ -77,8 +82,8 @@
                   </div>
                 </div>
                 <div class="now">
-                  Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">&nbsp;Paper Anniversary (Đám cưới giấy)&nbsp;</strong> sau <strong
-                    style="color: #ffc107;">&nbsp;1 năm&nbsp;</strong> kết hôn
+                  Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">&nbsp;Paper Anniversary (Đám cưới
+                    giấy)&nbsp;</strong> sau <strong style="color: #ffc107;">&nbsp;1 năm&nbsp;</strong> kết hôn
                   <span class="display-resultKyNiem display-resultKyNiem-paper">
                     <img src="src/images/achievement/paper.png" alt="dam-cuoi-giay" />
                   </span>
@@ -140,102 +145,108 @@
         </div>
       </div>
     </div>
+
+    <div class='box-support'>
+      <a href="javascript:;" class="btn item batnhac mt-3 gs-animation-4">&#9835;</a>
+      <a href="javascript:;" class="btn item tatnhac mt-3 gs-animation-7">&#128263;</a>
+      <a href="/rubyngoc" class="btn item quaylai mt-3 gs-animation-5">&#127968;</a>
+    </div>
   </section>
 
-    <!-- Hoa rơi -->
-    <style type="text/css">
-      .snow-container {
-        position: fixed;
-        width: 100%;
-        max-width: 100%;
-        z-index: 99999;
-        pointer-events: none;
-        overflow: hidden;
-        top: 0;
-        height: 100%;
-      }
-  
-      .snow {
-        display: block;
-        position: absolute;
-        z-index: 2;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        pointer-events: none;
+  <!-- Hoa rơi -->
+  <style type="text/css">
+    .snow-container {
+      position: fixed;
+      width: 100%;
+      max-width: 100%;
+      z-index: 99999;
+      pointer-events: none;
+      overflow: hidden;
+      top: 0;
+      height: 100%;
+    }
+
+    .snow {
+      display: block;
+      position: absolute;
+      z-index: 2;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      pointer-events: none;
+      -webkit-transform: translate3d(0, -100%, 0);
+      transform: translate3d(0, -100%, 0);
+      -webkit-animation: snow linear infinite;
+      animation: snow linear infinite;
+    }
+
+    .snow.foreground {
+      background-image: url(src/images/hoa-hong-3.png);
+      -webkit-animation-duration: 15s;
+      animation-duration: 10s;
+    }
+
+    .snow.foreground.layered {
+      -webkit-animation-delay: 7.5s;
+      animation-delay: 7.5s;
+    }
+
+    .snow.middleground {
+      background-image: url(src/images/hoa-hong-3.png);
+      -webkit-animation-duration: 20s;
+      animation-duration: 15s;
+    }
+
+    .snow.middleground.layered {
+      -webkit-animation-delay: 10s;
+      animation-delay: 10s;
+    }
+
+    .snow.background {
+      background-image: url(src/images/hoa-hong-3.png);
+      -webkit-animation-duration: 25s;
+      animation-duration: 20s;
+    }
+
+    .snow.background.layered {
+      -webkit-animation-delay: 12.5s;
+      animation-delay: 12.5s;
+    }
+
+    @-webkit-keyframes snow {
+      0% {
         -webkit-transform: translate3d(0, -100%, 0);
         transform: translate3d(0, -100%, 0);
-        -webkit-animation: snow linear infinite;
-        animation: snow linear infinite;
       }
-  
-      .snow.foreground {
-        background-image: url(src/images/hoa-hong-3.png);
-        -webkit-animation-duration: 15s;
-        animation-duration: 10s;
+
+      100% {
+        -webkit-transform: translate3d(5%, 100%, 0);
+        transform: translate3d(5%, 100%, 0);
       }
-  
-      .snow.foreground.layered {
-        -webkit-animation-delay: 7.5s;
-        animation-delay: 7.5s;
+    }
+
+    @keyframes snow {
+      0% {
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
       }
-  
-      .snow.middleground {
-        background-image: url(src/images/hoa-hong-3.png);
-        -webkit-animation-duration: 20s;
-        animation-duration: 15s;
+
+      100% {
+        -webkit-transform: translate3d(5%, 100%, 0);
+        transform: translate3d(5%, 100%, 0);
       }
-  
-      .snow.middleground.layered {
-        -webkit-animation-delay: 10s;
-        animation-delay: 10s;
-      }
-  
-      .snow.background {
-        background-image: url(src/images/hoa-hong-3.png);
-        -webkit-animation-duration: 25s;
-        animation-duration: 20s;
-      }
-  
-      .snow.background.layered {
-        -webkit-animation-delay: 12.5s;
-        animation-delay: 12.5s;
-      }
-  
-      @-webkit-keyframes snow {
-        0% {
-          -webkit-transform: translate3d(0, -100%, 0);
-          transform: translate3d(0, -100%, 0);
-        }
-  
-        100% {
-          -webkit-transform: translate3d(5%, 100%, 0);
-          transform: translate3d(5%, 100%, 0);
-        }
-      }
-  
-      @keyframes snow {
-        0% {
-          -webkit-transform: translate3d(0, -100%, 0);
-          transform: translate3d(0, -100%, 0);
-        }
-  
-        100% {
-          -webkit-transform: translate3d(5%, 100%, 0);
-          transform: translate3d(5%, 100%, 0);
-        }
-      }
-    </style>
-  
-    <div class="snow-container">
-      <div class="snow foreground"></div>
-      <div class="snow foreground layered"></div>
-      <div class="snow middleground"></div>
-      <div class="snow middleground layered"></div>
-      <div class="snow background"></div>
-      <div class="snow background layered"></div>
-    </div>
+    }
+  </style>
+
+  <div class="snow-container">
+    <div class="snow foreground"></div>
+    <div class="snow foreground layered"></div>
+    <div class="snow middleground"></div>
+    <div class="snow middleground layered"></div>
+    <div class="snow background"></div>
+    <div class="snow background layered"></div>
+  </div>
 
   <script src="dist/main.js"></script>
 </body>
