--- a/finish.html
+++ b/finish.html
@@ -25,7 +25,7 @@
             <h1 class="card-title">
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item2 gs-animation-1">Trần Mạnh</div>
-              <div class="gs-animation-6" style=" color: #fff; ">&#10084;</div>
+              <div class="gs-animation-6" style="display: flex; align-items: center;color: #fff; ">&#10084;</div>
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item3 gs-animation-2">Hồng Ngọc</div>
             </h1>
