--- a/box-agree.html
+++ b/box-agree.html
@@ -24,7 +24,7 @@
               style="max-width: 58rem"
             >
               <img
-                src="src/images/chibi-4.jpg"
+                src="src/images/ngua_vs_de_4.jpg"
                 class="card-img-top item gs-animation-1"
                 alt="..."
               />
