--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               style="max-width: 48rem"
             >
               <img
-                src="src/images/chibi-1.jpg"
+                src="src/images/ngua_vs_de_1.jpg"
                 class="card-img-top item gs-animation-1"
                 alt="..."
               />
@@ -51,7 +51,7 @@
               class="card text-center align-self-center"
               style="max-width: 58rem"
             >
-              <img src="src/images/chibi-2.png" class="card-img-top gs-animation-1" alt="..." />
+              <img src="src/images/ngua_vs_de_2.jpg" class="card-img-top gs-animation-1" alt="..." />
               <div class="card-body">
                 <h1 class="card-title gs-animation-2">Em thích anh lắm phải không &#8265;</h1>
                 <h3 class="card-text gs-animation-2">
