Update new domain

--- a/finish.html
+++ b/finish.html
@@ -25,7 +25,7 @@
             <h1 class="card-title">
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item2 gs-animation-1">Trần Mạnh</div>
-              <div class="gs-animation-6" style="display: flex; align-items: center;color:#f44336">&#10084;</div>
+              <div class="gs-animation-6" style="display: flex; align-items: center;color: #fff; ">&#10084;</div>
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item3 gs-animation-2">Hồng Ngọc</div>
             </h1>
@@ -76,17 +76,15 @@
                   </div>
                   <div class="text-time">
                     <span class="resultKyNiemDamCuoi" id="resultKyNiemDamCuoiGiay_show"></span>
-                    <span class="display-resultKyNiem display-resultKyNiem-paper">
-                      <img src="src/images/achievement/paper.png" alt="dam-cuoi-giay" />
-                    </span>
+                    <span class="display-resultKyNiem display-resultKyNiem-paper blink-text"><small>Xem
+                      thêm</small></span>
                   </div>
                 </div>
                 <div class="now">
                   Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">&nbsp;Paper Anniversary (Đám cưới
                     giấy)&nbsp;</strong> sau <strong style="color: #ffc107;">&nbsp;1 năm&nbsp;</strong> kết hôn
-                  <span class="display-resultKyNiem display-resultKyNiem-paper">
-                    <img src="src/images/achievement/paper.png" alt="dam-cuoi-giay" />
-                  </span>
+                    <span class="display-resultKyNiem display-resultKyNiem-paper blink-text"><small>Xem
+                      thêm</small></span>
                 </div>
                 <div class="notice">
                   1 năm - Đám cưới Giấy: Tượng trưng cho sự mong manh của năm đầu hôn nhân.
