--- a/finish.html
+++ b/finish.html
@@ -14,9 +14,9 @@
 
 <body>
   <section class="box-finish">
-    <div class="container">
+    <div class="">
       <div class="box-card">
-        <div class="card mt-3 pt-5 text-center align-self-center" style="max-width: 58rem">
+        <div class="card mt-3 pt-5 text-center align-self-center" style="">
           <!-- <img src="src/images/chibi-5.jpg" class="card-img-top item gs-animation-3" alt="..." /> -->
           <div class="card-body">
             <h3 class="card-text item gs-animation-4">
@@ -25,7 +25,7 @@
             <h1 class="card-title">
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item2 gs-animation-1">Trần Mạnh</div>
-              <div class="gs-animation-6" style="display: flex; align-items: center;color: #fff; ">&#10084;</div>
+              <div class="gs-animation-6" style="display: flex; align-items: center;color:#f44336">&#10084;</div>
               <div style="font-family: 'VN-Sunshine-Script', 'Arial', sans-serif;font-size: 48px;color: #ffeb3b"
                 class="item3 gs-animation-2">Hồng Ngọc</div>
             </h1>
@@ -34,7 +34,7 @@
             </h3>
             <br />
 
-            <div class="video-wrapper">
+            <div class="video-wrapper hidden">
               <iframe src="https://www.youtube.com/embed/pnSXfw2ucWo?rel=0" height="315" width="560" allowfullscreen=""
                 frameborder="0">
               </iframe>
@@ -55,7 +55,8 @@
             <p class="card-text item gs-animation-4" style="margin-bottom: 0;">
               Hai bạn đã là người yêu của nhau trong:
             </p>
-            <div class="card-text item gs-animation-7" style="display: flex; justify-content: center;margin-bottom: 20px;color: #ffeb3b;display: flex; align-items: center;">
+            <div class="card-text item gs-animation-7"
+              style="display: flex; justify-content: center;margin-bottom: 20px;color: #ffeb3b;display: flex; align-items: center;">
               <span id="timeDaYeuNhau_show"></span>
             </div>
 
@@ -71,24 +72,25 @@
               <div class='box-achievement-paper'>
                 <div class="future">
                   <div class="text-top">
-                    Hai bạn sẽ đạt thành tựu <strong style="color: #ffc107;">Paper Anniversary (Đám cưới giấy)</strong>
+                    Hai bạn sẽ đạt thành tựu <strong style="color: #ffc107;">📜 Paper Anniversary (Đám cưới
+                      giấy)</strong>
                     sau:
                   </div>
                   <div class="text-time">
                     <span class="resultKyNiemDamCuoi" id="resultKyNiemDamCuoiGiay_show"></span>
                     <span class="display-resultKyNiem display-resultKyNiem-paper blink-text"><small>Xem
-                      thêm</small></span>
+                        thêm</small></span>
                   </div>
                 </div>
                 <div class="now">
-                  Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">&nbsp;Paper Anniversary (Đám cưới
-                    giấy)&nbsp;</strong> sau <strong style="color: #ffc107;">&nbsp;1 năm&nbsp;</strong> kết hôn
+                    Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">📜 Paper Anniversary (Đám cưới
+                    giấy)</strong> sau <strong style="color: #ffc107;">&nbsp;1 năm&nbsp;</strong> kết hôn.
                     <span class="display-resultKyNiem display-resultKyNiem-paper blink-text"><small>Xem
                       thêm</small></span>
                 </div>
-                <div class="notice">
-                  1 năm - Đám cưới Giấy: Tượng trưng cho sự mong manh của năm đầu hôn nhân.
-                  <br><br>
+                <div class="notice container">
+                  <h4>📜 1 năm - Đám cưới Giấy: Tượng trưng cho sự mong manh của năm đầu hôn nhân.</h4>
+                  <br>
                   Kỷ niệm 1 năm ngày cưới, thường được gọi là Đám cưới Giấy, mang ý nghĩa sâu sắc và tinh tế. Nó tượng
                   trưng cho sự khởi đầu của một cuộc hành trình chung đầy cảm xúc, thử thách, và sự học hỏi. Hình ảnh
                   "giấy" không chỉ là một biểu tượng đơn giản, mà còn chứa đựng nhiều ý nghĩa sâu xa về tình yêu và mối
@@ -130,10 +132,142 @@
                   rằng một mối quan hệ cần được chăm sóc, bảo vệ và nuôi dưỡng để vượt qua những thử thách đầu đời và
                   trưởng thành mạnh mẽ.
                 </div>
+                <div class="slider-achievement swiper mt-3 mb-5">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/02/CocNuoc1.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/Ngoc_2.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/Nice_Manh_3.JPG">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/End_San_Ho.jpeg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/08/HKRDDLKhwBUU.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/17/20240317_210049.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
+                    </div>
+
+
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/02/CocNuoc1.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/Ngoc_2.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/Nice_Manh_3.JPG">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/03/End_San_Ho.jpeg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/08/HKRDDLKhwBUU.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/17/20240317_210049.jpg">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="/src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
+                    </div>
+
+
+                  </div>
+                </div>
               </div>
               <!-- End box-achievement-paper -->
 
-              <div class="box-achievement-cotton" style=" color: #6c757d; ">
+              <div class='box-achievement-cotton'>
+                <div class="future">
+                  <div class="text-top">
+                    Hai bạn sẽ đạt thành tựu <strong style="color: #ffc107;">🪡 Cotton Anniversary (Đám cưới
+                      Bông)</strong> sau:
+                  </div>
+                  <div class="text-time">
+                    <span class="resultKyNiemDamCuoi" id="resultKyNiemDamCuoiBong_show"></span>
+                    <span class="display-resultKyNiem display-resultKyNiem-cotton blink-text"><small>Xem thêm</small>
+                    </span>
+                  </div>
+                </div>
+                <div class="now">
+                  Chúc mừng hai bạn đạt thành tựu <strong style="color: #ffc107;">🪡 Cotton Anniversary (Đám cưới
+                    Bông)</strong>
+                  sau <strong style="color: #ffc107;">&nbsp;2 năm&nbsp;</strong> kết hôn.
+                </div>
+                <div class="notice container">
+                  <h4>🪡 2 năm - Đám cưới Bông: Biểu tượng của sự mềm mại, linh hoạt và bền vững trong hôn nhân.</h4>
+                  <br>
+                  Đám cưới Bông là cột mốc đánh dấu 2 năm bên nhau của một cặp vợ chồng. "Bông" tượng trưng cho sự mềm
+                  mại, linh hoạt và khả năng thích nghi, thể hiện cách mà tình yêu của hai bạn đã trở nên thoải mái hơn
+                  theo thời gian.
+                  <br><br>
+                  Trong năm thứ hai, cặp đôi đã bắt đầu hiểu nhau sâu sắc hơn, chấp nhận những khác biệt, cùng nhau vượt
+                  qua thử thách và điều chỉnh cuộc sống chung để trở nên hòa hợp hơn. Hôn nhân giống như một tấm vải
+                  bông mềm mại – tuy nhẹ nhàng nhưng cũng có thể bền bỉ nếu được chăm sóc đúng cách.
+                  <br><br>
+                  Bông là chất liệu dễ uốn nắn, điều đó cũng giống như một mối quan hệ cần sự linh hoạt, nhẫn nại và sự
+                  thấu hiểu từ cả hai phía. Những khác biệt ban đầu có thể dần được điều chỉnh, những tranh cãi có thể
+                  hóa giải, và sự gắn kết ngày càng chặt chẽ hơn.
+                  <br><br>
+                  Ngoài ra, bông còn đại diện cho sự ấm áp và thoải mái. Trong năm thứ hai, cặp đôi thường đã xây dựng
+                  được một cuộc sống ổn định hơn, tạo nên không gian yêu thương, ấm áp và đầy sự chăm sóc dành cho nhau.
+                  <br><br>
+                  Mối quan hệ cũng như một sợi bông có thể kéo dài vô tận nếu cả hai tiếp tục vun đắp tình cảm, giữ gìn
+                  sự nhẹ nhàng và kiên nhẫn trong hôn nhân.
+                  <br><br>
+                  <h3>🌪️ Những khó khăn và thách thức trong năm thứ hai</h3><br>
+                  🔹 **Sự mất đi của cảm giác mới mẻ**<br>
+                  Khi bước sang năm thứ hai, cặp đôi có thể nhận thấy rằng cảm giác hồi hộp, đam mê ban đầu đã giảm dần.
+                  Tình yêu không còn những cảm xúc bùng cháy như lúc đầu, thay vào đó là sự quen thuộc, đôi khi là nhàm
+                  chán.
+                  <br>
+                  🔹 **Những khác biệt trở nên rõ ràng hơn**<br>
+                  Nếu trong năm đầu tiên, hai người còn có thể dễ dàng bỏ qua những thói quen nhỏ của nhau, thì sang năm
+                  thứ hai, những khác biệt về lối sống, quan điểm và thói quen có thể trở thành vấn đề.
+                  <br>
+                  🔹 **Xung đột về tài chính**<br>
+                  Khi cả hai bắt đầu ổn định hơn trong cuộc sống hôn nhân, các vấn đề tài chính như tiết kiệm, chi tiêu
+                  hoặc đầu tư có thể gây ra tranh cãi. Nếu không có sự thống nhất, đây có thể trở thành nguyên nhân lớn
+                  dẫn đến căng thẳng.
+                  <br>
+                  🔹 **Sự lặp lại và nhàm chán**<br>
+                  Cuộc sống hàng ngày bắt đầu trở nên đều đặn với những công việc quen thuộc: đi làm, nấu ăn, dọn dẹp,
+                  nghỉ ngơi… Nếu không tìm cách làm mới mối quan hệ, hai bạn có thể cảm thấy cuộc sống hôn nhân mất dần
+                  sự thú vị.
+                  <br>
+                  🔹 **Áp lực từ gia đình và xã hội**<br>
+                  Sau 2 năm kết hôn, những câu hỏi như "Bao giờ có con?", "Khi nào mua nhà?", "Công việc ổn định chưa?"
+                  có thể gây áp lực lên cả hai. Nếu không cùng nhau đối mặt, điều này có thể tạo ra khoảng cách giữa hai
+                  vợ chồng.
+                  <br>
+                  🔹 **Sự cân bằng giữa công việc và gia đình**<br>
+                  Khi cả hai bắt đầu tập trung hơn vào sự nghiệp, có thể sẽ có ít thời gian dành cho nhau hơn. Việc
+                  không ưu tiên thời gian cho mối quan hệ có thể khiến tình cảm dần phai nhạt.
+                  <br><br>
+                  <strong>Kết Luận:</strong><br>
+                  Đám cưới Bông là một lời nhắc nhở rằng dù hôn nhân cần sự vững chắc, nhưng nó cũng phải mềm mại và
+                  linh hoạt. Khi cả hai cùng nỗ lực vun đắp tình yêu, hôn nhân sẽ trở nên êm đềm, nhẹ nhàng nhưng vẫn
+                  bền vững theo thời gian.
+                </div>
+              </div>
+              <!-- End box-achievement-cotton -->
+
+
+              <div class="box-achievement-leather" style=" color: #6c757d; ">
                 Thành tựu mở khóa tiếp theo ???
               </div>
 
@@ -245,6 +379,10 @@
     <div class="snow background"></div>
     <div class="snow background layered"></div>
   </div>
+
+  <style>
+
+  </style>
 
   <script src="dist/main.js"></script>
 </body>
