--- a/finish.html
+++ b/finish.html
@@ -135,54 +135,54 @@
                 <div class="slider-achievement swiper mt-3 mb-5">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/02/CocNuoc1.jpg">
+                      <img src="./src/media/2024/03/02/CocNuoc1.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/Ngoc_2.jpg">
+                      <img src="./src/media/2024/03/03/Ngoc_2.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/Nice_Manh_3.JPG">
+                      <img src="./src/media/2024/03/03/Nice_Manh_3.JPG">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/End_San_Ho.jpeg">
+                      <img src="./src/media/2024/03/03/End_San_Ho.jpeg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/08/HKRDDLKhwBUU.jpg">
+                      <img src="./src/media/2024/03/08/HKRDDLKhwBUU.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
+                      <img src="./src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/17/20240317_210049.jpg">
+                      <img src="./src/media/2024/03/17/20240317_210049.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
+                      <img src="./src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
                     </div>
 
 
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/02/CocNuoc1.jpg">
+                      <img src="./src/media/2024/03/02/CocNuoc1.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/Ngoc_2.jpg">
+                      <img src="./src/media/2024/03/03/Ngoc_2.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/Nice_Manh_3.JPG">
+                      <img src="./src/media/2024/03/03/Nice_Manh_3.JPG">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/03/End_San_Ho.jpeg">
+                      <img src="./src/media/2024/03/03/End_San_Ho.jpeg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/08/HKRDDLKhwBUU.jpg">
+                      <img src="./src/media/2024/03/08/HKRDDLKhwBUU.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
+                      <img src="./src/media/2024/03/09/1212ec6527708b2ed26120.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/17/20240317_210049.jpg">
+                      <img src="./src/media/2024/03/17/20240317_210049.jpg">
                     </div>
                     <div class="swiper-slide">
-                      <img src="/src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
+                      <img src="./src/media/2024/03/24/0a9e7129efb35fed06a26.jpg">
                     </div>
 
 
